# dotprompt

./: .env.example  .gitignore  .kilocodemodes  Dockerfile  FRAGMENT_IMPLEMENTATION_PLAN.md  docker-compose.yml
clients/python/: .gitignore  README.md  pyproject.toml  python_client_plan.md
clients/python/src/dotprompt/: __init__.py  _transport.py  async_client.py  client.py  events.py  exceptions.py  models.py
clients/python/tests/: test_client.py  test_integration.py
docs/: language.md
dot-prompt_vscode/: dot-prompt_langauge.md  language-configuration.json  package.json
dot_prompt/: .gitignore  Dockerfile.headless  docker-compose.example.yml
plans/: agent-friendliness-audit-2026-04-08.md  fragment_set_implementation.md  github_polling_plan.md  main_plan_v2.md  pre_push_contract_testing_plan.md  role-and-message-sections-impl.md  seo_audit.md  vercel_deployment.md
server/: docker-compose.headed.yml  docker-compose.headless.yml  mix.exs
tealspeachtest_prompts/: ai_streaming_system_message.prompt  analysis_agent.prompt  analysis_user_prompt.prompt  answer_evaluator.prompt  context_compactor.prompt  curriculum.prompt  evaluator.prompt  exercise_generator.prompt  hint_generator.prompt  intro.prompt  navigation_agent.prompt  qa_fallback.prompt  (+11 more)
tools/tests/python-demo/: docker-compose.yml  pyproject.toml
tools/tests/python-demo/prompts/fragments/: conditional_greeting.prompt
tools/tests/python-demo/prompts/fragments/tips/: collection_tips.prompt  tip_1.prompt
tools/tests/python-demo/prompts/skills/: _index.prompt
tools/tests/python-demo/src/: demo.py
(+361 files in other folders)
